--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,6 +37,30 @@ jobs:
         key: ${{ secrets.VM_SSH_KEY }}
         script: |
           docker pull ${{ secrets.DOCKER_USERNAME }}/myapp:latest
+
+          # Stop/remove container named myapp if exists
           docker stop myapp || true
           docker rm myapp || true
-          docker run -d --name myapp -p 80:80 ${{ secrets.DOCKER_USERNAME }}/myapp:latest
+
+          # If some other container is publishing host port 80, stop and remove it
+          occupant=$(docker ps --format '{{.ID}} {{.Names}} {{.Ports}}' | awk '/0.0.0.0:80->/ {print $1; exit}')
+          if [ -n "$occupant" ]; then
+            echo "Found container using host port 80: $occupant — stopping and removing it"
+            docker stop "$occupant" || true
+            docker rm "$occupant" || true
+          fi
+
+          # If port 80 is still in use by a non-container process, try to stop common services or kill the process
+          if ss -ltnp 2>/dev/null | grep -q ':80 '; then
+            echo "Port 80 appears in use by a non-container process. Attempting to stop common web services..."
+            # Try stopping known services; use sudo if needed
+            if sudo systemctl is-active --quiet nginx; then
+              sudo systemctl stop nginx
+              echo "Stopped nginx"
+            fi
+            if sudo systemctl is-active --quiet apache2 || sudo systemctl is-active --quiet httpd; then
+              sudo systemctl stop apache2 || sudo systemctl stop httpd
+              echo "Stopped apache/httpd"
+            fi
+
+            # If still in use, show
