--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -36,11 +36,38 @@
         name: docker
         state: present
 
-    # Pull and run the web application container
-    - name: Pull and run web application
+    # Copy app files to remote host and build a Docker image from them
+    - name: Ensure remote app directory exists
+      file:
+        path: /opt/myapp
+        state: directory
+        owner: root
+        group: root
+        mode: '0755'
+
+    - name: Copy application files to remote host
+      copy:
+        src: "{{ playbook_dir }}/../app/"
+        dest: /opt/myapp/
+        owner: root
+        group: root
+        mode: '0644'
+        recurse: yes
+
+    - name: Build Docker image from app (myapp:latest)
+      become: yes
+      become_user: root
+      command: docker build -t myapp:latest /opt/myapp
+
+    - name: Ensure previous webapp container is stopped and removed
       docker_container:
         name: webapp
-        image: nginx:latest  # We'll change this to your web app image later
+        state: absent
+
+    - name: Run webapp container from built image
+      docker_container:
+        name: webapp
+        image: myapp:latest
         state: started
         ports:
           - "80:80"
