--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,8 +22,7 @@ jobs:
 
     - name: Build Docker image
       run: |
-        # Build using the Dockerfile inside the `app` folder
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/myapp:latest ./app
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/myapp:latest .
 
     - name: Push Docker image
       run: |
