--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,86 +4,57 @@ on:
   push:
     branches:
       - main
-  pull_request:
+  workflow_dispatch: # Enable manual trigger from GitHub UI
+
+env:
+  DOCKER_IMAGE: ${{ secrets.DOCKER_USERNAME }}/devops-sample-app # CHANGE 'YOUR-USERNAME'
+  DOCKER_TAG: latest
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+      # --- 1. BUILD AND PUSH IMAGE (CI) ---
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build Docker image
-      run: |
-        # Build using the Dockerfile inside the `app` folder
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/myapp:latest ./app
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./app  # Use the Dockerfile and code in the 'app' directory
+          push: true
+          tags: ${{ env.DOCKER_IMAGE }}:${{ env.DOCKER_TAG }}
 
-    - name: Push Docker image
-      run: |
-        docker push ${{ secrets.DOCKER_USERNAME }}/myapp:latest
+      # --- 2. DEPLOY CONTAINER (CD) using Ansible ---
+      - name: Setup SSH key for Ansible
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.VM_SSH_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -H ${{ secrets.VM_HOST }} >> ~/.ssh/known_hosts 2>/dev/null || true
 
-    - name: Deploy to Azure VM via SSH
-      uses: appleboy/ssh-action@v1.2.0
-      with:
-        host: ${{ secrets.VM_HOST }}
-        username: ${{ secrets.VM_USER }}
-        key: ${{ secrets.VM_SSH_KEY }}
-        script: |
-          docker pull ${{ secrets.DOCKER_USERNAME }}/myapp:latest
-
-          # Stop/remove container named myapp if exists
-          docker stop myapp || true
-          docker rm myapp || true
-
-          # If some other container is publishing host port 80, stop and remove it
-          occupant=$(docker ps --format '{{.ID}} {{.Names}} {{.Ports}}' | awk '/0.0.0.0:80->/ {print $1; exit}')
-          if [ -n "$occupant" ]; then
-            echo "Found container using host port 80: $occupant — stopping and removing it"
-            docker stop "$occupant" || true
-            docker rm "$occupant" || true
-          fi
-
-          # If port 80 is still in use by a non-container process, try to stop common services or kill the process
-          if ss -ltnp 2>/dev/null | grep -q ':80 '; then
-            echo "Port 80 appears in use by a non-container process. Attempting to stop common web services..."
-            # Try stopping known services; use sudo if needed
-            if sudo systemctl is-active --quiet nginx; then
-              sudo systemctl stop nginx
-              echo "Stopped nginx"
-            fi
-            if sudo systemctl is-active --quiet apache2 || sudo systemctl is-active --quiet httpd; then
-              sudo systemctl stop apache2 || sudo systemctl stop httpd
-              echo "Stopped apache/httpd"
-            fi
-
-            # If still in use, show listener info and try to extract PIDs to kill (last resort)
-            if ss -ltnp 2>/dev/null | grep -q ':80 '; then
-              echo "Port 80 still in use. Showing listener info:"
-              ss -ltnp | grep ':80' || true
-              # Extract PID(s) from ss output (format may vary) and attempt to kill
-              pids=$(ss -ltnp | awk '/:80/ {match($0,"pid=[0-9]+"); if (RSTART) {pidstr=substr($0,RSTART,RLENGTH); gsub(/pid=/,"",pidstr); print pidstr}}' | sort -u)
-              for pid in $pids; do
-                if [ -n "$pid" ]; then
-                  echo "Attempting to kill PID $pid"
-                  sudo kill "$pid" || true
-                fi
-              done
-            fi
-          fi
-
-          # Final check: if still occupied, abort to avoid silent failures
-          if ss -ltnp 2>/dev/null | grep -q ':80 '; then
-            echo "ERROR: host port 80 is still allocated after attempts to free it. Aborting."
-            ss -ltnp | grep ':80' || true
-            exit 1
-          fi
-
-          # Run the new container binding host port 80
-          docker run -d --name myapp -p 80:80 ${{ secrets.DOCKER_USERNAME }}/myapp:latest
+      - name: Deploy using Ansible playbook
+        run: |
+          # Install Ansible
+          sudo apt update
+          sudo apt install -y ansible
+          
+          # Create inventory file with secrets
+          cat > /tmp/inventory.ini << EOF
+          [webservers]
+          azure-server ansible_host=${{ secrets.VM_HOST }} ansible_user=${{ secrets.VM_USER }} ansible_ssh_private_key_file=~/.ssh/id_rsa
+          EOF
+          
+          # Run the Ansible playbook with variables
+          ansible-playbook -i /tmp/inventory.ini ansible/complete-deploy.yml \
+            -e "docker_image=${{ secrets.DOCKER_USERNAME }}/devops-sample-app" \
+            -e "docker_tag=latest" \
+            -v
+        env:
+          ANSIBLE_HOST_KEY_CHECKING: false
