--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,7 +52,7 @@ jobs:
           EOF
           
           # Run the Ansible playbook with variables
-          ansible-playbook -i /tmp/inventory.ini ansible/deploy.yml \
+          ansible-playbook -i /tmp/inventory.ini ansible/main.yml \
             -e "docker_image=${{ secrets.DOCKER_USERNAME }}/devops-sample-app" \
             -e "docker_tag=latest" \
             -v
