--- a/ansible/deploy-docker.yaml
+++ b/ansible/deploy-docker.yaml
@@ -12,13 +12,13 @@
           - "Using SSH user: {{ ansible_user }}"
           - "Using Python: {{ ansible_python_version }}"
       
-    # - name: Ensure host is reachable
-    #   ping:
-    #   register: ping_result
+    - name: Ensure host is reachable
+      ping:
+      register: ping_result
       
-    # - name: Show ping result
-    #   debug:
-    #     var: ping_result
+    - name: Show ping result
+      debug:
+        var: ping_result
 
   tasks:
     # Step 1: Ensure Docker is installed
@@ -53,10 +53,10 @@
       when: "'webapp' in docker_containers.stdout"
       ignore_errors: yes
 
-    # # Step 6: Remove old images to prevent caching issues
-    # - name: Remove old images
-    #   shell: docker rmi hussaindbs/html:latest || true
-    #   ignore_errors: yes
+    # Step 6: Remove old images to prevent caching issues
+    - name: Remove old images
+      shell: docker rmi bakardoc/webapp:latest || true
+      ignore_errors: yes
 
     # Step 7: Check Docker service status
     - name: Verify Docker service
@@ -69,7 +69,7 @@
 
     # Step 8: Pull fresh image to ensure latest version
     - name: Pull latest Docker image
-      command: docker pull hussaindbs/html:latest
+      command: docker pull bakardoc/webapp:latest
       register: pull_result
       until: pull_result.rc == 0
       retries: 3
@@ -96,43 +96,43 @@
         --name webapp
         --restart unless-stopped
         -p 80:80
-        hussaindbs/html:latest
+        bakardoc/webapp:latest
       register: container_run
       
     - name: Display container run result
       debug:
         var: container_run.stdout_lines
         
-    # Step 11: Verify container is running
-    - name: Wait for container to be running
-      command: docker ps -f name=webapp -f status=running --format {% raw %}'{{.Status}}'{% endraw %}
-      register: container_status
-      until: container_status.stdout.find('Up') != -1
-      retries: 5
-      delay: 5
+    # # Step 11: Verify container is running
+    # - name: Wait for container to be running
+    #   command: docker ps -f name=webapp -f status=running --format {% raw %}'{{.Status}}'{% endraw %}
+    #   register: container_status
+    #   until: container_status.stdout.find('Up') != -1
+    #   retries: 5
+    #   delay: 5
       
-    - name: Show container status
-      debug:
-        var: container_status.stdout_lines
+    # - name: Show container status
+    #   debug:
+    #     var: container_status.stdout_lines
         
-    # Step 12: Check container logs for any issues
-    - name: Get container logs
-      command: docker logs webapp
-      register: container_logs
+    # # Step 12: Check container logs for any issues
+    # - name: Get container logs
+    #   command: docker logs webapp
+    #   register: container_logs
       
-    - name: Display container logs
-      debug:
-        var: container_logs.stdout_lines
+    # - name: Display container logs
+    #   debug:
+    #     var: container_logs.stdout_lines
 
-    # Step 13: List running containers
-    - name: Show running Docker containers
-      command: docker ps -a
-      register: running_containers
-      changed_when: false
+    # # Step 13: List running containers
+    # - name: Show running Docker containers
+    #   command: docker ps -a
+    #   register: running_containers
+    #   changed_when: false
 
-    - name: Print running container info
-      debug:
-        var: running_containers.stdout_lines
+    # - name: Print running container info
+    #   debug:
+    #     var: running_containers.stdout_lines
 
     # Step 14: Display access web link in the terminal
     - name: Show public access URL
