--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,9 +24,11 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - name: change directory
+        run: cd app
+
       - name: Build Docker image
         run:
-          cd app
           docker build -t ${{ secrets.DOCKER_USERNAME }}/webapp:latest
 
       - name: Push Docker image to Docker Hub
