--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Build Docker image
         run:
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/webapp:latest
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/webapp:latest .
 
       - name: Push Docker image to Docker Hub
         run:
