--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -2,26 +2,22 @@
 - name: Complete DevOps Deployment
   hosts: webservers
   become: yes
-  vars:
-    # Defaults - can be overridden with --extra-vars or inventory/group_vars
-    docker_image: "{{ lookup('env','DOCKER_USERNAME') | default('your-docker-username') }}/myapp"
-    docker_tag: "latest"
+  gather_facts: yes
+
+  pre_tasks:
+    - name: Debug connection information
+      debug:
+        msg: 
+          - "Connected to host: {{ inventory_hostname }}"
+          - "Using SSH user: {{ ansible_user }}"
+          - "Using Python: {{ ansible_python_version }}"
   
   tasks:
-    - name: Update apt cache
+    - name: Install Docker
       apt:
+        name: docker.io
+        state: present
         update_cache: yes
-        cache_valid_time: 3600
-
-    # - name: Install required packages
-    #   apt:
-    #     name: "{{ item }}"
-    #     state: present
-    #   loop:
-    #     - docker.io
-    #     - python3-pip
-    #     - nodejs
-    #     - npm
 
     - name: Start and enable Docker service
       service:
@@ -35,11 +31,6 @@
         groups: docker
         append: yes
 
-    # - name: Install Docker Python module
-    #   pip:
-    #     name: docker
-    #     state: present
-
     - name: Stop and remove existing container
       shell: |
         docker stop webapp || true
@@ -47,51 +38,8 @@
       ignore_errors: yes
 
     - name: Pull latest Docker image
-      shell: docker pull bakardoc/
+      shell: docker pull bakardoc/webapp:latest
       register: pull_result
-
-    - name: Show pull result
-      debug:
-        msg: "Pulled image: {{ docker_image }}:{{ docker_tag }}"
-
-    # - name: Free host port 80 if used by another container
-    #   shell: |
-    #     # Find any container publishing host port 80 and stop/remove it
-    #     occ=$(docker ps --format '{{.ID}} {{.Names}} {{.Ports}}' | awk '/0.0.0.0:80->/ {print $1; exit}')
-    #     if [ -n "$occ" ]; then
-    #       echo "Found container using host port 80: $occ — stopping and removing it"
-    #       docker stop "$occ" || true
-    #       docker rm "$occ" || true
-    #     fi
-    #   args:
-    #     warn: false
-
-    # - name: Stop common web services if they are listening on port 80
-    #   shell: |
-    #     # If a system service (nginx/apache) is binding port 80, try to stop it
-    #     if ss -ltnp 2>/dev/null | grep -q ':80 '; then
-    #       echo "Port 80 appears in use by a non-container process. Attempting to stop nginx/apache..."
-    #       if systemctl is-active --quiet nginx 2>/dev/null; then
-    #         sudo systemctl stop nginx || true
-    #         echo "Stopped nginx"
-    #       fi
-    #       if systemctl is-active --quiet apache2 2>/dev/null; then
-    #         sudo systemctl stop apache2 || true
-    #         echo "Stopped apache2"
-    #       fi
-    #     fi
-    #   args:
-    #     warn: false
-
-    # - name: Final check - abort if port 80 still allocated
-    #   shell: |
-    #     if ss -ltnp 2>/dev/null | grep -q ':80 '; then
-    #       echo "ERROR: host port 80 is still allocated after attempts to free it. Showing listeners and aborting."
-    #       ss -ltnp | grep ':80' || true
-    #       exit 1
-    #     fi
-    #   args:
-    #     warn: false
 
     - name: Run new container
       shell: docker run -d --name webapp -p 80:80 {{ docker_image }}
