--- a/ansible/deploy-docker.yaml
+++ b/ansible/deploy-docker.yaml
@@ -103,36 +103,36 @@
       debug:
         var: container_run.stdout_lines
         
-    # # Step 11: Verify container is running
-    # - name: Wait for container to be running
-    #   command: docker ps -f name=webapp -f status=running --format {% raw %}'{{.Status}}'{% endraw %}
-    #   register: container_status
-    #   until: container_status.stdout.find('Up') != -1
-    #   retries: 5
-    #   delay: 5
+    # Step 11: Verify container is running
+    - name: Wait for container to be running
+      command: docker ps -f name=webapp -f status=running --format {% raw %}'{{.Status}}'{% endraw %}
+      register: container_status
+      until: container_status.stdout.find('Up') != -1
+      retries: 5
+      delay: 5
       
-    # - name: Show container status
-    #   debug:
-    #     var: container_status.stdout_lines
+    - name: Show container status
+      debug:
+        var: container_status.stdout_lines
         
-    # # Step 12: Check container logs for any issues
-    # - name: Get container logs
-    #   command: docker logs webapp
-    #   register: container_logs
+    # Step 12: Check container logs for any issues
+    - name: Get container logs
+      command: docker logs webapp
+      register: container_logs
       
-    # - name: Display container logs
-    #   debug:
-    #     var: container_logs.stdout_lines
+    - name: Display container logs
+      debug:
+        var: container_logs.stdout_lines
 
-    # # Step 13: List running containers
-    # - name: Show running Docker containers
-    #   command: docker ps -a
-    #   register: running_containers
-    #   changed_when: false
+    # Step 13: List running containers
+    - name: Show running Docker containers
+      command: docker ps -a
+      register: running_containers
+      changed_when: false
 
-    # - name: Print running container info
-    #   debug:
-    #     var: running_containers.stdout_lines
+    - name: Print running container info
+      debug:
+        var: running_containers.stdout_lines
 
     # Step 14: Display access web link in the terminal
     - name: Show public access URL
